--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-       
+    <h1>Começo js</h1>
+    <script>
+        var nome = window.prompt("Digite seu nome: ")
+        window.alert("Olá " + nome + ", seja bem vindo!")
+    </script>   
 </body>
 </html>
