Add sum demo and update rex.html
Add aula010/index.html — a simple 'Somando Valores' exercise (pt-BR) with two numeric inputs, a Somar button and a somar() JavaScript function that calculates and displays the sum. Modify aula06/rex.html: change the second Number.parseInt call (the token was split across two lines in this edit).

--- a/aula06/rex.html
+++ b/aula06/rex.html
@@ -18,7 +18,8 @@
 
     <script>
         var n1 = Number.parseInt(window.prompt('Digite seu numero: '))
-        var n2 = Number.parseInt(window.prompt('Digite outro numero: '))
+        var n2 = Number.pa+
+        rseInt(window.prompt('Digite outro numero: '))
         var s = n1 + n2
         window.alert('Sua soma é, ' + s)
     </script>
