Update somar() output text and variable usage
Modify aula010/index.html: adjust indentation, change the result message wording to "o resultado da soma de ${n1} e ${n2} é ${s}", and remove the `var` declarations for n1 and n2 (they are now implicit globals). Review variable scoping if global variables were not intended.

--- a/aula010/index.html
+++ b/aula010/index.html
@@ -13,15 +13,15 @@
     <div id="res">Resultado</div>
 
     <script>
-        function somar() {
+       function somar() {
         var tx1 = window.document.querySelector('input#txt1')
         var tx2 = window.document.querySelector('input#txt2')
         var res = window.document.querySelector('div#res')
-        var n1 = Number(tx1.value)
-        var n2 = Number(tx2.value)
+        n1 = Number(tx1.value)
+        n2 = Number(tx2.value)
         var s = n1 + n2
-        res.innerHTML = `o resultado de ${n1} + ${n2} é ${s}`
-        }
+        res.innerHTML = `o resultado da soma de ${n1} e ${n2} é ${s}` 
+       }
 
     </script>
 </body>
