--- a/projeto-navbarres/index.html
+++ b/projeto-navbarres/index.html
@@ -24,8 +24,8 @@
                 <button><a href="#">Entrar</a></button>
             </div>
             
-            <div class="menumobileicon">
-                <button><img class="menuicon" src="assets/cardapio.png" alt=""></button>
+            <div class="menumobileicon" >
+                <button id="eventclick"><img class="menuicon" src="assets/cardapio.png" alt=""></button>
             </div>
             <div class="menumobile">
                 <ul class="navlist">
@@ -40,4 +40,5 @@
         </nav>
     </header>
 </body>
+<script src="script.js"></script>
 </html>
